# unhippo

./: .gitignore  CITATION.cff  LICENSE  README.md  pyproject.toml  train.py
config/: train.yaml
config/data/: fsd.yaml  sc.yaml  sc10.yaml  sc35.yaml
config/experiment/: fsd-discretize.yaml  fsd.yaml  sc10-discretize.yaml  sc10-sigma2.yaml  sc10.yaml  sc35.yaml
config/hydra/launcher/: slurm.yaml
config/model/: lssl.yaml  unlssl.yaml
config/model/lssl/: fixed.yaml  learned.yaml
config/model/unlssl/: exact.yaml  fixed.yaml  learned.yaml
config/task/: classification.yaml
notebooks/: condition-number.ipynb  legendre.ipynb  linear-dynamical-system.ipynb  regularized-unhippo-matrix.ipynb  skew-symmetric-decomposition.ipynb  unssm.ipynb
scripts/: eval_noise_range.py
unhippo/: __init__.py  ema.py
unhippo/data/: atomic.py  free_spoken_digits.py  sampler.py  speech_commands.py
unhippo/models/: krylov_conv.py  layers.py  ssms.py  utils.py
unhippo/nn/: __init__.py  sequential.py
unhippo/tasks/: classification.py  plots.py
unhippo/utils/: callbacks.py  logging.py  seed.py  wandb.py
